generate rspec files for  models, add faker generators to factories

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-GMAIL_USERNAME=andrewtoms38@gmail.com
-GMAIL_PASSWORD=ronby8-Bevsaz-hyk
-GMAIL_SECURED_PASSWORD=wzfwmjcolqrawhup
+ACTION_MAILER_DELIVERY_METHOD=smtp
+HOST=localhost
+SMTP_ADDRESS=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=andrewtoms38@gmail.com
+SMTP_PASSWORD=ronby8-Bevsaz-hyk
+SMTP_SECURED_PASSWORD=wzfwmjcolqrawhup
+SMTP_AUTHENTICATION=plain
