generate rspec files for  models, add faker generators to factories

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-GMAIL_USERNAME=
-GMAIL_PASSWORD=
-GMAIL_SECURED_PASSWORD=
+ACTION_MAILER_DELIVERY_METHOD=smtp
+HOST=localhost
+SMTP_ADDRESS=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_SECURED_PASSWORD=
+SMTP_AUTHENTICATION=plain
