--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "AskIt",
   "private": true,
   "dependencies": {
+    "@hotwired/turbo-rails": "^7.1.3",
     "@popperjs/core": "^2.11.6",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
