add kickers/runners notifiers queues with priority

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -7,4 +7,7 @@ production:
 :max_retries: 1
 
 :queues:
-  - default
+  - [critical, 4]
+  - [runners_notifiers, 3]
+  - [kickers_notifiers, 2]
+  - [default, 1]
