add pg gem, configure database in yml file, fix seeds and tests after megre

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_SECURED_PASSWORD=
 SMTP_AUTHENTICATION=plain
+
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=askit_admin
+DB_PASSWORD=password123
+DB_RAILS_MAX_THREADS=5
