update env vars, smtp settings in development, database config vars

--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,18 @@ ACTION_MAILER_DELIVERY_METHOD=smtp
 HOST=localhost:3000
 SMTP_ADDRESS=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=askit@example.com
-SMTP_PASSWORD=password
-SMTP_SECURED_PASSWORD=secured_password
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_SECURED_PASSWORD=
 SMTP_AUTHENTICATION=plain
 
 # database variables
 
 DB_HOST=localhost
 DB_PORT=5432
-DB_USERNAME=username
-DB_PASSWORD=password
+DB_USERNAME=
+DB_PASSWORD=
 DB_RAILS_MAX_THREADS=5
+DB_NAME_DEVELOPMENT=askit_db_development
+DB_NAME_TEST=askit_db_test
+DB_NAME_PRODUCTION=askit_db_production
