--- a/config/database.yml
+++ b/config/database.yml
@@ -3,20 +3,20 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: <%= ENV.fetch("DB_HOST", "localhost") %>
-  port: <%= ENV.fetch("DB_PORT", "5432") %>
-  username: <%= ENV.fetch("DB_USERNAME", "postgres") %>
-  password: <%= ENV.fetch("DB_PASSWORD", "") %>
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS", "5") %>
+  host: <%= ENV.fetch("DB_HOST") %>
+  port: <%= ENV.fetch("DB_PORT") %>
+  username: <%= ENV.fetch("DB_USERNAME") %>
+  password: <%= ENV.fetch("DB_PASSWORD") %>
+  pool: <%= ENV.fetch("DB_RAILS_MAX_THREADS") %>
 
 development:
   <<: *default
-  database: askit_db_development
+  database: <%= ENV.fetch("DB_NAME_DEVELOPMENT") %>
 
 test:
   <<: *default
-  database: askit_db_test
+  database: <%= ENV.fetch("DB_NAME_TEST") %>
 
 production:
   <<: *default
-  database: <%= ENV.fetch("DB_NAME", "askit_db_production") %>
+  database: <%= ENV.fetch("DB_NAME_PRODUCTION") %>
