--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -30,8 +30,8 @@ RSpec/MessageChain:
 
 # Offense count: 1
 # Configuration parameters: AllowSubject.
-# RSpec/MultipleMemoizedHelpers:
-#   Max: 6
+RSpec/MultipleMemoizedHelpers:
+  Max: 6
 
 # Offense count: 1
 # Configuration parameters: Database, Include.
@@ -48,13 +48,6 @@ Rails/CreateTableWithTimestamps:
   Exclude:
     - 'db/migrate/20220819071701_create_question_categories.rb'
     - 'db/migrate/20220927115917_rolify_create_roles.rb'
-
-# Offense count: 2
-# Configuration parameters: EnforcedStyle.
-# SupportedStyles: slashes, arguments
-Rails/FilePath:
-  Exclude:
-    - 'config/environments/development.rb'
 
 # Offense count: 1
 # Configuration parameters: Include.
@@ -73,11 +66,6 @@ Rails/I18nLocaleAssignment:
     - 'spec/mailers/question_mailer_spec.rb'
     - 'spec/rails_helper.rb'
 
-# Offense count: 1
-Rails/OutputSafety:
-  Exclude:
-    - 'app/helpers/application_helper.rb'
-
 # Offense count: 4
 # Configuration parameters: Include.
 # Include: db/**/*.rb
@@ -87,14 +75,6 @@ Rails/ReversibleMigration:
     - 'db/migrate/20220822140531_drop_comments.rb'
     - 'db/migrate/20220830195557_drop_table_users.rb'
     - 'db/migrate/20221004134450_drop_table_active_admin_comments.rb'
-
-# Offense count: 2
-# Configuration parameters: Include.
-# Include: app/models/**/*.rb
-Rails/UniqueValidationWithoutIndex:
-  Exclude:
-    - 'app/models/category.rb'
-    - 'app/models/user.rb'
 
 # Offense count: 2
 # This cop supports safe autocorrection (--autocorrect).
