add redis config and env variables

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ SMTP_PASSWORD=
 SMTP_SECURED_PASSWORD=
 SMTP_AUTHENTICATION=plain
 
-# database variables
+# database PostgreSQL variables
 
 DB_HOST=localhost
 DB_PORT=5432
@@ -19,3 +19,10 @@ DB_RAILS_MAX_THREADS=5
 DB_NAME_DEVELOPMENT=askit_db_development
 DB_NAME_TEST=askit_db_test
 DB_NAME_PRODUCTION=askit_db_production
+
+# database Redis variables
+
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_HOST=
+REDIS_PORT=
