add redis env variables, update config for redis

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,9 @@ DB_NAME_PRODUCTION=askit_db_production
 
 # database Redis variables
 
-REDIS_USERNAME=
-REDIS_PASSWORD=
 REDIS_HOST=
 REDIS_PORT=
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DATABASE=
+REDIS_SSL=
