--- a/config/redis.yml
+++ b/config/redis.yml
@@ -12,7 +12,9 @@ test:
 
 production:
   <<: *default
-  username: <%= ENV.fetch("REDIS_USERNAME") %>
-  password: <%= ENV.fetch("REDIS_PASSWORD") %>
   host: <%= ENV.fetch("REDIS_HOST") %>
   port: <%= ENV.fetch("REDIS_PORT") %>
+  username: <%= ENV.fetch("REDIS_USERNAME") %>
+  password: <%= ENV.fetch("REDIS_PASSWORD") %>
+  database: <%= ENV.fetch("REDIS_DATABASE") %>
+  ssl: <%= ENV.fetch("REDIS_SSL") %>
