update env.example and redis config file

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-#mailer variables
+# host variables
+
+HOST=localhost
+PORT=3000
+
+# mailer variables
 
 ACTION_MAILER_DELIVERY_METHOD=smtp
-HOST=localhost:3000
 SMTP_ADDRESS=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USERNAME=
@@ -16,14 +20,14 @@ DB_PORT=5432
 DB_USERNAME=
 DB_PASSWORD=
 DB_RAILS_MAX_THREADS=5
-DB_NAME_DEVELOPMENT=askit_db_development
+DB_NAME_DEVELOPMENT=askit-db-development
 DB_NAME_TEST=askit_db_test
-DB_NAME_PRODUCTION=askit_db_production
+DB_NAME_PRODUCTION=askit-db-production
 
 # database Redis variables
 
-REDIS_HOST=
-REDIS_PORT=
+REDIS_HOST=localhost
+REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=
 REDIS_DATABASE=
