disable cop for rspec receive_message_chain method

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -60,3 +60,6 @@ RSpec/ExampleLength:
 # Configuration parameters: AllowSubject.
 RSpec/MultipleMemoizedHelpers:
   Max: 6
+
+RSpec/MessageChain:
+  Enabled: false
